fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 .no-scroll {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 @theme {
-  --font-family-monte: "Montserrat", sans-serif;
-  --font-family-inter: "Inter", sans-serif;
-  --breakpoint-smx: 340px;
+    --font-family-monte: "Montserrat", sans-serif;
+    --font-family-inter: "Inter", sans-serif;
+    --breakpoint-smx: 340px;
 }
 
 @layer utilities {
-  .scrollbar-hide {
-    -ms-overflow-style: none;
-    /* IE & Edge */
-    scrollbar-width: none;
-    /* Firefox */
-  }
-  .scrollbar-hide::-webkit-scrollbar {
-    display: none;
-    /* Chrome, Safari, Opera */
-  }
+    .scrollbar-hide {
+        -ms-overflow-style: none;
+        /* IE & Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+    .scrollbar-hide::-webkit-scrollbar {
+        display: none;
+        /* Chrome, Safari, Opera */
+    }
 }
 
 html {
-  scroll-behavior: smooth;
-  font-family: "Inter", sans-serif;
-  overflow: hidden;
+    scroll-behavior: smooth;
+    font-family: "Inter", sans-serif;
+    overflow-x: hidden;
 }
